logs/puda_20260529_203502.log
========================================
PUDA Training Launcher
Timestamp: Fri May 29 20:35:02     2026
GPU_ID: 0
Project: /d/ChemBL/PAINSBench
Python: /e/anaconda/python
PyTorch: 2.5.1
CUDA: True
GPU: 
========================================

[Fri May 29 20:35:07     2026] Starting PUDA training (attempt 1)...
  File "D:\ChemBL\PAINSBench\scripts\19_puda.py", line 65
    mol=Chem.MolFromSmiles(smi)
    ^
IndentationError: expected an indented block after 'for' statement on line 64
